dev-eks-k8s/catalog/2.1metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-metrics
  namespace: demo
  labels:
    app: catalog
    metrics: "true"
spec:
  selector:
    app: catalog
  ports:
    - name: metrics
      port: 9464
      targetPort: 9464
      protocol: TCP
