dev-eks-k8s/catalog/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-canary
  namespace: demo
spec:
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: catalog

---
apiVersion: v1
kind: Service
metadata:
  name: catalog-stable
  namespace: demo

spec:
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: catalog
