dev-eks-k8s/catalog/2-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog-vsvc
  namespace: demo
spec:
  hosts:
    - "api.travelersources.com"   # updated from api.localdev.me
  gateways:
    - api-gateway                 # should match your updated Gateway
  http:

    # Canary route must be first
    - name: catalog-canary-debug
      match:
        - uri:
            prefix: "/catalog/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            exact: "/catalog"
          headers:
            x-canary:
              exact: "true"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: catalog-canary
            port:
              number: 3001

    # Stable route
    - name: catalog-route
      match:
        - uri:
            prefix: "/catalog/"
        - uri:
            exact: "/catalog"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: catalog-stable
            port:
              number: 3001
          weight: 100
        - destination:
            host: catalog-canary
            port:
              number: 3001
          weight: 0
